Added .gitignore, generated by https://www.gitignore.io

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@
 *.userosscache
 *.sln.docstates
 
+# User-specific files (MonoDevelop/Xamarin Studio)
+*.userprefs
+
 # Build results
 [Dd]ebug/
 [Dd]ebugPublic/
@@ -22,14 +25,14 @@ bld/
 [Bb]in/
 [Oo]bj/
 
-# Roslyn cache directories
-*.ide/
+# Visual Studo 2015 cache/options directory
+.vs/
 
 # MSTest test Results
 [Tt]est[Rr]esult*/
 [Bb]uild[Ll]og.*
 
-#NUNIT
+# NUNIT
 *.VisualState.xml
 TestResult.xml
 
@@ -151,7 +154,7 @@ csx/
 AppPackages/
 
 # Others
-*.Cache
+*.[Cc]ache
 ClientBin/
 [Ss]tyle[Cc]op.*
 ~$*
@@ -186,6 +189,15 @@ UpgradeLog*.htm
 # Microsoft Fakes
 FakesAssemblies/
 
+# Node.js Tools for Visual Studio
+.ntvs_analysis.dat
+
+# Visual Studio 6 build log
+*.plg
+
+# Visual Studio 6 workspace options file
+*.opt
+
 
 ### Windows ###
 # Windows image file caches
@@ -207,3 +219,5 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+/target/
+nbactions*.xml
